# push_swap

./: .tets.kate-swp  CMakeLists.txt  Makefile  a.out  checker  checker.c  getchr_tets.c  hash.c  main.c  push_swap  push_swap.c  spedtest_or.cpp  speed_test.c  test  test2
includes/: push_swap.h
lib/libft/: CMakeLists.txt  Makefile
lib/libft/includes/: libft.h
lib/libft/src/: ft_atoi.c  ft_hash.c  ft_hash_del.c  ft_lstd_collapse.c  ft_lstd_del.c  ft_lstd_pop_front.c  ft_lstd_push_back.c  ft_lstd_push_front.c  ft_lstddel.c  ft_lstiter.c  ft_lstlen.c  ft_lstmap.c  ft_lstnew.c  ft_memcmp.c  ft_memcpy.c  ft_memset.c  ft_merge_sort.c  ft_min.c  ft_putchar_fd.c  ft_putstr_fd.c  ft_quick_sort.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlen.c  ft_strncmp.c  ft_strncpy.c  ft_strnew.c  ft_swap.c  ft_tree_new.c  ft_upper_bound.c  get_next_line.c
lib/libft/src/ft_printf_src/: tools.c
src/: dfs.c  dfs_@.c  dfs_copy.c  dfs_tool.c  ft_array_to_lstd.c  ft_checker_tools.c  ft_is_array_in_lstd.c  ft_is_str_in_lstd.c  ft_lstd_deep_del.c  ft_lstd_del_2.c  ft_lstd_swap.c  ft_lstd_to_array.c  ft_lstd_to_str.c  ft_lstprint.c  ft_operation.c  ft_operation2.c  ft_output.c  ft_ps_new_content.c  ft_queue_sort.c  ft_quick_sort.c  ft_sort_lstd.c  ft_sort_ratio.c  ft_sort_tools.c  ft_sort_tools2.c  ft_sort_tools3.c  ft_sort_tools4.c  ft_strsplit_to_inttab.c  is_sorted.c  push_swap.c  read.c
